--- a/coreav/build.gradle
+++ b/coreav/build.gradle
@@ -25,8 +25,6 @@ android {
         }
     }
 
-
-
     buildTypes {
         debug{
             jniDebuggable true
@@ -35,6 +33,7 @@ android {
             debuggable true
         }
         release {
+            jniDebuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
